# Nutrivize

./: README.md  pyproject.toml
api/: dependancies.py  main.py
api/auth/: auth.py  security.py
api/crud/: __init__.py  daily_log.py  food.py  food_entry.py  user.py
api/database/: db.py
api/models/: __init__.py  daily_log.py  food.py  food_entry.py  user.py
api/schema/: __init__.py  user.py
backend/: config.py  main.py  server.py
backend/api/: __init__.py  dependancies.py
backend/api/routes/: admin.py  auth.py  daily_log.py  food.py  food_entry.py  nutrition.py  user.py
backend/auth/: __init__.py  auth.py  security.py
backend/crud/: __init__.py  base.py  daily_log.py  food.py  food_entry.py  user.py
backend/database/: db.py
backend/models/: __init__.py  daily_log.py  food.py  food_entry.py  user.py
backend/schemas/: daily_log.py  food_entry.py  user.py
nutrition_logger/: main.py
nutrition_logger/crud/: __init__.py  base.py  daily_log.py  food.py  food_entry.py  user.py
nutrition_logger/database/: db.py
nutrition_logger/models/: __init__.py  daily_log.py  food.py  food_entry.py  user.py
nutrition_logger/schema/: daily_log.py  food.py  food_entry.py  user.py
tests/endpoint/: conftest.py  test_admin_routes.py  test_auth_routes.py  test_daily_log_routes.py  test_diagnostics.py  test_food_entry_routes.py  test_food_routes.py  test_user_routes.py
tests/integration/: test_auth_integration.py  test_crud.py  test_models.py  test_serialization.py
tests/unit/: test_auth_unit.py  test_schema.py
